Rename component to avoid overlap with Feed

--- a/client/src/Components/User/UserPost/UserPost.css
+++ b/client/src/Components/User/UserPost/UserPost.css
@@ -1,4 +1,4 @@
-.feed-post {
+.user-feed-post {
   border: 1px solid rgba(0,0,0,0.2);
   border-radius: 4px;
   margin:0 15px 15px 15px;
